# Chess-DeepBlueV2

./: .gitignore  Cargo.toml  README.md  garde_eveil.ps1
src/: arena.rs  bots.rs  checkpoints.rs  elo.rs  features.rs  lib.rs  nn.rs  nnue.rs  search.rs  selfplay.rs  uci.rs
web/: app.js  index.html  style.css  training.html  training.js
