[package]
name = "echec"
version = "0.1.0"
edition = "2021"

[dependencies]
shakmaty = "0.27"
rayon = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
